Fix learning text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,7 @@ a > img {
   justify-content: center;
   flex-direction: column;
   margin-top: 6rem;
+  text-align: center;
 }
 
 .icons {
